examples/mood/tests/type_errors/uses_struct_names.mood
struct Foo {
  x: i32,
}

pub fn test(): i32 {
  let foo: i32 = Foo { x: 100_i32 };
  200_i32
}